--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
         
 
   <section id="video-logo">
-    <video muted autoplay loop>
+    <video muted autoplay loop poster="/assets/media/hehim.jpg">
       <source type="video/webm" src="/assets/media/hehim.webm">
       <source type="video/mp4" src="/assets/media/hehim.mp4">
     </video>
