--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
 
     <meta property="og:title" content="He Him, a guide to masculinity.">
     <meta property="og:description" content="">
-    <meta property="og:image" content="https://hehim.co/assets/media/og-image.png">
-    <meta name="twitter:image" content="https://hehim.co/assets/media/og-image.png">
+    <meta property="og:image" content="http://hehim.co/assets/media/og-image.png">
+    <meta name="twitter:image" content="http://hehim.co/assets/media/og-image.png">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="He Him">
@@ -47,16 +47,22 @@
         
 
   <section id="video-logo">
-    <video muted autoplay loop poster="/assets/media/hehim.jpg">
+    <video muted autoplay playsinline loop poster="/assets/media/hehim.jpg">
       <source type="video/webm" src="/assets/media/hehim.webm">
       <source type="video/mp4" src="/assets/media/hehim.mp4">
     </video>
-    <div class="border">
+    <div class="border top">
+    </div>
+    <div class="border left">
+    </div>
+    <div class="border right">
+    </div>
+    <div class="border bottom">
     </div>
   </section>
 
   <section id="newsletter-signup">
-    <h1>Want to get updates as we launch?</h1>
+    <h1>Get Updates</h1>
 
     <div id="mc_embed_signup">
       <form action="https://lamasix.us16.list-manage.com/subscribe/post?u=543c25805cf05076563093e23&amp;id=cdbe6b7142" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -91,7 +97,7 @@
       </svg>
     </div>
     <div class="col right">
-      <h1>Recommended reading & watching as we get this thing going</h1>
+      <h1>Recommended consumption</h1>
       <ul>
         <li><a href="http://mantherapy.org" target="_blank">Man Therapy: Because you can't just rub some dirt on your emotions</a></li>
         <li><a href="https://medium.com/the-establishment/white-people-i-dont-want-you-to-understand-me-better-i-want-you-to-understand-yourselves-a6fbedd42ddf" target="_blank"><i>White People: I Don’t Want You To Understand Me Better, I Want You To Understand Yourselves</i> by Ijeoma Oluo</a></li>
