--- a/app/index.html
+++ b/app/index.html
@@ -60,8 +60,12 @@
     <div class="border bottom">
     </div>
   </section>
+  <section id="mission-statement">
+    <h1>A dialogue about modern expressions of masculinity that are diverse, inclusive, equitable and just.</h1>
+  </section>
 
   <section id="newsletter-signup">
+
     <h1>Get Updates</h1>
 
     <div id="mc_embed_signup">
