--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
     </div>
   </section>
   <section id="mission-statement">
-    <h1>A dialogue about modern expressions of masculinity that are diverse, inclusive, equitable and just.</h1>
+    <h1>A dialogue about modern expressions of masculinity that is diverse, inclusive, equitable and just.</h1>
   </section>
 
   <section id="newsletter-signup">
